<resources>
    <string name="app_name">Handy Notepad</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="confirm_username">Confirm Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="note_title">Title</string>
    <string name="note_description">Description</string>
    <string name="note_body">Body</string>
    <string name="add_note">Adding a Note</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="data_empty">Data cannot be empty</string>
    <string name="data_no_match">Data does not match</string>
    <string name="data_correct">Registering user successfully</string>
    <string name="data_login_correct">Credentials accepted</string>
    <string name="stay_signed_in">Stay signed in</string>
    <string name="update_note_title">Update a note</string>
    <string name="Add_new_note_title">Add a new note</string>
    <string name="current_time">Current time:</string>
    <string name="creation_time">Creation date:</string>
    <string name="creation_date">Creation date:</string>
    <string name="last_edit">Last edit:</string>
    <string name="none_notes_selected">None note has been selected</string>
    <string name="delete_some_notes">Some notes have been deleted..</string>
    <string name="open_camera">Open Camera</string>
    <string name="choose_from_gallery">Open Gallery</string>
    <string name="new_note">New note</string>
    <string name="permissions_for_images">Permissions are necessary for handling images and files</string>
    <string name="one_time_register">Only one time register. Protect your notes with an username and password.</string>
    <string name="notes_pictures">Save your notes with a picture. From Gallery or Camera.</string>
    <string name="notes_external_card">Send your notes to the internal phone memory or share with friends.</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_message">Are you sure you want to delete these notes?</string>
    <string name="dialog_title">Warning!</string>
    <string name="info_saved">Data saved</string>
    <string name="title_msg_empty">Title cannot be empty</string>
    <string name="menu_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="handy_notepad_v1_0">Handy Notepad v1.0</string>
    <string name="export_notes">Export notes</string>
    <string name="files_exported_msg">Files has been exported to the internal memory.</string>
    <string name="sd_card_detected_msg">SD Card not detected</string>
    <string name="update_android_msg">Need to update you Android version to 6.0 or higher</string>
    <string name="sd_card_msg">No SD Card is available for read and write data</string>
    <string name="permissions_granted_msg">Permissions granted!</string>
    <string name="gallery_selected">Gallery selected</string>
    <string name="camera_selected">Camera selected</string>
    <string name="select_all">Select all</string>
    <string name="sort_a_z">A..Z</string>
    <string name="sort_z_a">Z..A</string>
    <string name="sort_date_newest">Date Newest</string>
    <string name="sort_date_oldest">Date Oldest</string>
    <string name="sort_last_edit">Last Edit</string>
    <string name="sort_by">Sort by</string>
    <string name="file_creating">Processing this note..</string>
    <string name="select_app">Select an app:</string>
    <string name="make_a_copy">Make a copy</string>
    <string name="note_deleted">Note deleted successfully!</string>
    <string name="note_copy_successfully">This note has been copied successfully!</string>
    <string name="title_onboarding">Secure your notes</string>
    <string name="title_picture_onboarding">Notes with picture</string>
    <string name="title_memory_onboarding">Save or share notes</string>
</resources>
