<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.droidcafeinput.MainActivity">
    <item
        android:id="@+id/menu_action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_select_all_settings"
        android:orderInCategory="100"
        android:title="@string/select_all"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_order_asc"
        android:orderInCategory="100"
        android:title="@string/sort_a_z"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_order_desc"
        android:orderInCategory="100"
        android:title="@string/sort_z_a"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_order_date_asc"
        android:orderInCategory="100"
        android:title="@string/sort_date_newest"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_order_date_desc"
        android:orderInCategory="100"
        android:title="@string/sort_date_oldest"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_order_last_edit_asc"
        android:orderInCategory="100"
        android:title="@string/sort_last_edit"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never" />
</menu>