<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppNoActionBar"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/ivTwoOnBoardingImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_250dp"
        android:src="@mipmap/take_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20" />

    <TextView
        android:id="@+id/tvOneOnboardingText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/AppOnBoardingText"
        android:text="@string/notes_pictures"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivTwoOnBoardingImage"
        app:layout_constraintBottom_toTopOf="@id/ivOneDot"/>

    <ImageView
        android:id="@+id/ivOneDot"
        android:layout_width="@dimen/size_onboarding_dots"
        android:layout_height="@dimen/size_onboarding_dots"
        android:layout_marginStart="@dimen/dimen_12dp"
        android:src="@drawable/ic_light_dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <ImageView
        android:id="@+id/ivTwoDot"
        android:layout_width="@dimen/size_onboarding_dots"
        android:layout_height="@dimen/size_onboarding_dots"
        android:layout_marginStart="@dimen/dimen_12dp"
        android:src="@drawable/ic_dark_dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivOneDot"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <ImageView
        android:id="@+id/ivThreeDot"
        android:layout_width="@dimen/size_onboarding_dots"
        android:layout_height="@dimen/size_onboarding_dots"
        android:layout_marginStart="@dimen/dimen_12dp"
        android:src="@drawable/ic_light_dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivTwoDot"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <ImageView
        android:id="@+id/ivFourDot"
        android:layout_width="@dimen/size_onboarding_dots"
        android:layout_height="@dimen/size_onboarding_dots"
        android:layout_marginStart="@dimen/dimen_12dp"
        android:src="@drawable/ic_light_dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivThreeDot"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/tvTwotoOne"
        style="@style/AppOnBoardingButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"/>

    <TextView
        android:id="@+id/tvTwotoThree"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        style="@style/AppOnBoardingButtons"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>